--- a/main_admin.html
+++ b/main_admin.html
@@ -39,7 +39,7 @@
 
 
 <!--  IMAGE -->
-<div ng-repeat="item in items">
+<div ng-repeat="allBees in allBees">
 <div class="section group">
  <!-- <a href="#/editpage">  -->
  <!-- <div ng-repeat="item in items"> -->
@@ -47,15 +47,15 @@
        <!-- <form class="new-list-form" action="index.html" method="post"> -->
        <!-- <a href='#/'> -->
 
-       <img ng-src="{{item.img}}" id="input-image" type="image" ng-model="imageItem"/>
-       <h5>{{item.name}}</h5>
+       <img ng-src="{{allBees.img}}" id="input-image" type="image" ng-model="imageItem"/>
+       <h5>{{allBees.name}}</h5>
        <div class="name"  ng-model="nameItem"></div>
      <!-- </form> -->
      </div>
 
      <div class="col span_1_of_2">
        <!-- <form class="new-list-form" action="index.html" method="post"> -->
-       <input type="text"  id="input-description" placeholder="{{item.description}}" ng-model="descripton">
+       <input type="text"  id="input-description" placeholder="{{allBees.description}}" ng-model="descripton">
        <!-- </form> -->
        <a href='#/editpage'>
        <button class="main-edit"><span>Edit</span></button></a>
