Add styling and new routing

--- a/landing_page.html
+++ b/landing_page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -9,9 +9,19 @@
     <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/styles/consumer_styles.css">
 </head>
-<body>
+<body> -->
 
-<h1 class= "landingPageHead">bee_FFs</h2>
+  <div class="topWords">
+      <div class="topPad">
+      </div>
+          <img class = "beeIcon" src = "assets/images/beeFF_yello.png"</>
+      <span class="topLinks">
+        <button class = "nav"><a href = "#/cart"><h3>cart</h3></button></a>
+        <button class = "nav"><h3>admin</h3></button>
+        <button class = "nav"><a href = "#/bees"><h3>find friends</h3></button></a>
+        <h1 class= "landingPageHead">bee_FFs</h1>
+      </span>
+  </div>
 
 
 <div class="wrapper">
@@ -20,9 +30,9 @@
         <button id="adminRoute">Admin</button>
       </div>
     <div>
-        <button id="shopperRoute">Find Friends</button>
+        <button id="shopperRoute"><a href = "#/bees">Find Friends</button></a>
     </div>
 </div>
 
-</body>
-</html>
+<!-- </body>
+</html> -->
