--- a/view_cart.html
+++ b/view_cart.html
@@ -2,9 +2,9 @@
     <div class="topPad">
     </div>
     <span class="topLinks">
-  <button class = "nav"><h3>cart</h3></button>
+  <button class = "nav"><a href = "#/cart"><h3>cart</h3></button></a>
   <button class = "nav"><h3>admin</h3></button>
-  <button class = "nav"><a href = "#/home"><h3>home</h3></button></a>
+  <button class = "nav"><a href = "#/bees"><h3>find friends</h3></button></a>
   <h2>buy_it</h2>
 </span>
 </div>
