--- a/product_grid.html
+++ b/product_grid.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -9,17 +9,17 @@
     <title>View Products</title>
 </head>
 
-<body>
+<body> -->
 
 
     <div class="topWords">
         <div class="topPad">
         </div>
         <span class="topLinks">
-      <button class = "nav"><h3>cart</h3></button>
+      <button class = "nav"><a href = "#/cart"><h3>cart</h3></button></a>
       <button class = "nav"><h3>admin</h3></button>
-      <button class = "nav"><a href = "#/home"><h3>home</h3></button></a>
-      <h2>buy_it</h2>
+      <button class = "nav"><a href = "#/bees"><h3>find friends</h3></button></a>
+      <h1 class= "landingPageHead">bee_FFs</h1>
     </span>
     </div>
 
@@ -30,7 +30,7 @@
             <div class="grid grid-pad">
                 <div class="col-1-3">
                     <div class="content">
-                      <a href= "#/product_detail">
+                      <a href= "#/bee_detail">
                         <img class="grid_pics" src="assets/images/img_placeholder.gif">
                         </>
                         <div class="description"> Information about the stuff goes here</div>
@@ -94,6 +94,7 @@
                         </>
                         <div class="description"> Information about the stuff goes here</div>
                         <div class="price"> $15</div>
+                        <button class ="addCart"> Add to Cart </button>
                     </div>
                 </div>
                 <div class="col-1-3">
@@ -114,14 +115,14 @@
                 </div>
             </div>
 
-            End of row three-->
+            <!-- End of row three--> 
 
 
-            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
+            <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-resource.min.js"></script>
             <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 
-</html>
+</html> -->
