Add landing page

--- a/add_new.html
+++ b/add_new.html
@@ -62,13 +62,15 @@
                 Add New Item:
                   <!-- <li class="admin-new-li"> -->
                     <!-- <a href="#/"> -->
-                    <input type="price"  id="input-price" placeholder="{{item.price|currency}}" ng-model="priceItem"/>
+                    <input type="price"  id="input-price" placeholder="{{item.price}}" ng-model="priceItem"/>
 
                     <!-- <a href="#/"> -->
                   <input type="text" id="input-description" placeholder="{{item.description}}" ng-model="descriptionItem"/>
                   <input type = "submit" id = "submit" value="Submit"/>
               </form>
             </div>
+
+
                   <!-- </a> -->
                 <!-- </li> -->
 
@@ -77,7 +79,9 @@
                 <button class="new-page-btn">Save</button></a>
               </div>
             </div>
-        </div>
+          </div>
+
+
 
 
 
