Add only to remove a ton of possibilities that did not work

--- a/add_new.html
+++ b/add_new.html
@@ -76,7 +76,7 @@
 
                 <div class='new-btn'>
                 <a href="#/mainpage">
-                <button class="new-page-btn">Save</button></a>
+                <button ng-click="save-item" class="new-page-btn">Save</button></a>
               </div>
             </div>
           </div>
