--- a/edit_product.html
+++ b/edit_product.html
@@ -14,6 +14,8 @@
 
     <div class="container">
 
+    <!-- <div ng-controller="editPageController"> -->
+
     <div id="editpage">
 
 
@@ -47,26 +49,27 @@
     <div class="section group">
 
       <div class="col span_1_of_2">
-        <form ng-submit="submit()">
+
+        <!-- <form ng-submit="submit()"> -->
         <!-- <a href='#/'> -->
-        <img ng-src="{{item.image}" id="input-image" ng-model="imageItem"/>
+        <img ng-src="{{item.image}" id="input-image" type="image" ng-model="imageItem"/>
         <!-- <a href="#/"> -->
         <h5>{{item.name}}</h5>
         <div class="name" ng-model="nameItem"></div>
-      </form>
+      <!-- </form> -->
      </div>
 
 
 <!--  PRICE AND DESCRIPTION -->
 <div class="col span_1_of_2"><!-- not sure if I need this here -->
-  <form ng-submit="submit()">
+  <!-- <form ng-submit="submit()"> -->
     Edit Item:
         <!-- <a href="#/"> -->
       <input type="price"  id="input-price" placeholder"{{item.price}}" ng-model="priceItem"/>
         <!-- <a href="#/"> -->
         <input type="text" id="input-description" placeholder="{{item.description}}" ng-model="descriptionItem"/>
         <input type = "submit" id = "submit" value="Submit"/><!-- not sure if I need this here -->
-  </form>
+  <!-- </form> -->
 </div>
       <!-- </a> -->
 
