--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <div ng-app="mainApp">
+    <div ng-app="mainApp" ng-controller = "beeCtrl as bees">
         <ng-view></ng-view>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-resource.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-resource.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     <script type = "text/javascript" src="assets/js/consumer_controller.js"></script>
