--- a/landing_page.html
+++ b/landing_page.html
@@ -1,20 +1,7 @@
-<!-- <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>buy_it</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="assets/styles/consumer_styles.css">
-</head>
-<body> -->
 
   <div class="topWords">
       <div class="topPad">
       </div>
-          <img class = "beeIcon" src = "assets/images/beeFF_yello.png"</>
       <span class="topLinks">
         <button class = "nav"><a href = "#/cart"><h3>cart</h3></button></a>
         <button class = "nav"><h3>admin</h3></button>
@@ -34,5 +21,5 @@
     </div>
 </div>
 
-<!-- </body>
-</html> -->
+</div>
+<img class = "beeIcon" src = "assets/images/beeFF_yellogray_nobackground.png"</>
