--- a/product_detail.html
+++ b/product_detail.html
@@ -1,15 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="assets/styles/consumer_styles.css">
-    <title>View Products</title>
-</head>
-
-<body> -->
 
 <!--Nav bar-->
 <div class="topWords">
@@ -19,7 +7,7 @@
       <button class = "nav"><a href = "#/cart"><h3>cart</h3></button></a>
       <button class = "nav"><h3>admin</h3></button>
       <button class = "nav"><a href = "#/bees"><h3>find friends</h3></button></a>
-      <h2>buy_it</h2>
+      <h1 class= "landingPageHead"><a href = "#/bees">bee_FFs</h1></a>
     </span>
 </div>
 
@@ -44,11 +32,3 @@
           </div>
 
         </div>
-        <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-resource.min.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
-</body>
-
-</html> -->
