--- a/view_cart.html
+++ b/view_cart.html
@@ -5,35 +5,43 @@
   <button class = "nav"><a href = "#/cart"><h3>cart</h3></button></a>
   <button class = "nav"><h3>admin</h3></button>
   <button class = "nav"><a href = "#/bees"><h3>find friends</h3></button></a>
-  <h2>buy_it</h2>
+  <h1 class= "landingPageHead"><a class = "routingLinks" href = "#/home">bee_FFs</h1></a>
 </span>
 </div>
-
-<div class = "wrapper">
-  <div ng-controller = "cartStuff">
-
-    <div class="cartGrid">
-
+<div ng-controller="beeCart">
+    <div class="cartGrid-label">
         <div class="col-1-3">
-                <span class= "productName">Placeholder Product Name
-                </span>
-
-              </a>
-            </div>
-
+            <div class = "cartTitles">Name</div>
+        </div>
         <div class="col-1-3">
-            <!-- <div class="content"> -->
-              <div class="productPrice"> $15</div>
-            </div>
+            <div class = "cartTitles">Price</div>
+        </div>
+        <div class="col-1-3">
+            <div class = "cartTitles">Qty</div>
         </div>
 
-        <div class="col-1-3">
-            <!-- <div class="content"> -->
-              <input class="productQuantity"> </input>
+        <div class="cartGrid" ng>
+            <div class="col-1-3">
+                <span class="beeName" ng-model="bee.name"></span>
             </div>
+            <div class="col-1-3">
+                <span class="beeDesc" ng-model="bee.type"></span>
+            </div>
+            <div class="col-1-3">
+                <span class="beePrice" ng-model="bee.price"></span>
+            </div>
+            <div class="col-1-3">
+                <span class="beeQty" ng-model="bee.qty"></span>
+            </div>
+            <div class="col-1-3">
+            </div>
+
         </div>
     </div>
 
+</div>
 
-  </div>
+<div class = "cartTotal"> Total
+    <input>
+</div>
 </div>
