--- a/product_detail.html
+++ b/product_detail.html
@@ -21,14 +21,14 @@
                 <div class="closeConfirm">Okay
                 </div>
             </div>
-            <img class="detailPic" src="assets/images/img_placeholder.gif">
+            <img class="detailPic" src="assets/images/mr_pollen.jpg">
             </>
-            <div class="detailDesc">Lorem ipsum dolor sit amet, lacus nulla est integer. Feugiat nisl tortor ac lacus, dolor tincidunt pretium lorem, donec posuere at aenean at pellentesque. Dis malesuada diam tortor non ullamcorper, sed vehicula sit adipisicing, varius lacinia
-                condimentum ut duis nisl diam, fusce massa mauris fames elit vitae vitae, tincidunt mattis mauris tempor.
+            <div class="detailDesc">Mr. Pollen's family hails from the European continent, and his laid back perosnality makes him fun to unwind with. His favorite beverage is whiskey on the rocks, but he also loves a good Arnold Palmer (or really any beverage accompanied by a funny story).
+            Before retiring, Mr. Pollen worked at a brokerage firm in Minneapolis. Though he wasn't at all a fan of the harsh winters there, he still considers the Minneapolis area his home and frequently visits.
                 <br>
-                  <button class ="addCart"> Add to Cart </button>
+                  <button class ="addCart"><a href= "#/cart"> Hang Out With This Bee </a></button>
           </div>
-          <div class = "detailPrice">$15
+          <div class = "detailPrice">$25
           </div>
 
         </div>
